2010-11-28  Paul Tagliamonte  <paultag@ubuntu.com>

* Removed the #define for the window manager setting in
include/fbautostart.h. It's now a const char, and dynamic
with the new --window-manager flag.

2010-10-21  Paul Tagliamonte  <paultag@ubuntu.com>

* Bugfixes for random crap for XDG env issues.
This is a fix for issues that I missed when fixing
Segaja's issues.

2010-10-15  Paul Tagliamonte  <paultag@ubuntu.com>

* Bugfixes for random crap. Rewrote stuff to make
more sense.
* Fixed a few XDG spec issues. Should be betters now.
* Fixed a bug with env vars. Thanks, Segaja.

2010-10-14  Paul Tagliamonte  <paultag@ubuntu.com>

* Adding in the basic code stuff. Initial Release.